various fixes after merge

--- a/arches_for_science/media/css/project.css
+++ b/arches_for_science/media/css/project.css
@@ -1187,7 +1187,6 @@
 
 .file-configuration h4{
     position: relative;
-    cursor: pointer;
     color: #213e5f;
     font-size: 14px;
     font-weight: 400;
@@ -1227,7 +1226,6 @@
 
 .importer-configuration {
     position: relative;
-    cursor: pointer;
     color: #213e5f;
     font-size: 14px;
     margin-bottom: 0px;
@@ -1248,7 +1246,7 @@
     margin: 5px 0px 0px 0px;
 }
 
-.file-config-instuctions {
+.file-config-instructions {
     margin: 0px 0px 5px 0px;
     font-weight: 400;
     color: #666;
