--- a/arches_for_science/templates/views/components/plugins/init-workflow.htm
+++ b/arches_for_science/templates/views/components/plugins/init-workflow.htm
@@ -240,7 +240,7 @@
                 </div>
             </a>
             <!-- /ko -->
-            <!-- ko with: workflows().find(workflow => workflow.pluginid === "1132c953-5d8w-4acb-87c5-39c5b996799e") -->
+            <!-- ko with: workflows().find(workflow => workflow.pluginid === "129d18d4-261a-4a3c-b46e-cf74e71d848c") -->
             <a data-bind="attr: {href: $data.url, title: $data.name}" href="#">
                 <div data-bind="style: {'background-color': $data.config.thumbnailBackgroundColor}" class="workflow-select-card">
                     <h4 class="workflow-select-title" data-bind="text: $data.name"></h4>
