Fix typo in select-dataset-files-step

--- a/arches_for_science/templates/views/components/workflows/upload-dataset/select-dataset-files-step.htm
+++ b/arches_for_science/templates/views/components/workflows/upload-dataset/select-dataset-files-step.htm
@@ -79,7 +79,7 @@
                         <div style="font-size: 1.15em; text-align: center; color: #440468;">
                             <i class="fa fa-info-circle"></i><span style="margin-left: 5px;">{% trans "File Formats" %}</span>
                         </div>
-                        <div style="color: #9951C0; text-align: center;">{% trans "Only ASCII files can be presented as interactive charts. Supported image files and PDF files will automatically detected and displayed." %}</div>
+                        <div style="color: #9951C0; text-align: center;">{% trans "Only ASCII files can be presented as interactive charts. Supported image files and PDF files will be automatically detected and displayed." %}</div>
                     </div>
                     <div style="margin-top: 15px;" data-bind="visible: selectedPartHasCurrentObservation()">
                         <div class="dataset-name">
