--- a/arches_for_science/templates/views/components/workflows/project-report-workflow/download-project-files.htm
+++ b/arches_for_science/templates/views/components/workflows/project-report-workflow/download-project-files.htm
@@ -4,11 +4,9 @@
         <h5 class="file-list-label" data-bind="text: $root.translations.dataForDownload"></h5>
     </div>
     <div class="expand-select-container">
-        <div class="expand-select-buttons">
-            <button class="expand-select-button" data-bind="click: function() { expandAll(true); }"><i class="ion-plus"></i>{% trans ' Expand' %}</button>
-            <button class="expand-select-button" data-bind="click: function() { expandAll(false); }"><i class="ion-minus"></i>{% trans ' Collapse' %}</button>
-        </div>
         <div class="table-tools-container">
+            <button class="project-file-selection" data-bind="click: function() { expandAll(true); }"><i class="ion-plus"></i>{% trans ' Expand' %}</button>
+            <button class="project-file-selection" data-bind="click: function() { expandAll(false); }"><i class="ion-minus"></i>{% trans ' Collapse' %}</button>
             <div class="project-file-selection">
                 <span data-bind="text: numberOfFiles()"></span>
                 <span data-bind="visible: numberOfSelectedFiles() != 1">{% trans "files" %}</span>
