Add view to get manifest lookup, #1438

--- a/arches_for_science/templates/javascript.htm
+++ b/arches_for_science/templates/javascript.htm
@@ -18,6 +18,7 @@
     add_chemical_analysis_images_file_upload = "{% url 'add_chemical_analysis_images_file_upload' %}"
     download_project_files = "{% url 'download_project_files' %}"
     temp_file = "{% url 'temp_file' %}"
+    manifest_x_canvas = "{% url 'manifest_x_canvas' %}"
 ></div>
 {% endblock arches_urls %}
 
